add new portfolio

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
                         <div>
                             <p>HTML</p>
                             <p>CSS</p>
-                            <p>JavaScript</p>
+                            <p>JavaScript, VueJS</p>
                             <p>PHP</p>
+
                         </div>
                         <div>
                             <p>Laravel Framework</p>
@@ -232,31 +233,116 @@
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-9/12 xl:mx-auto">
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/movie-app.png" alt="" class="w-full">
+                        </div>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Movie App</h3>
+                        <p class="font-medium text-base text-slate-300 mb-5">
+                            This project is designed to provide comprehensive information about a wide array of films. The application enables users to search millions of movies, displaying detailed information such as synopses, cast, and ratings, as well as providing integrated movie trailers for seamless viewing. The technologies employed include Vue.js for responsive and robust front-end development, Tailwind CSS for modern and customizable styling, and the TMDB API for reliable, up-to-date movie data. The application's design is fully responsive and optimized for various devices, featuring a user-friendly and intuitive interface. For the best experience, I recommend accessing the application on a mobile device.
+                        </p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="https://mhdd-movie.vercel.app/" target="_blank"
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="https://github.com/mhddfajarr/Movie-App" target="_blank"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/cek-ongkir.png" alt="" class="w-full">
+                        </div>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Cek Ongkir Indonesia</h3>
+                        <p class="font-medium text-base text-slate-300 mb-5">
+                            Cek Ongkir Indonesia is a sophisticated web application designed to help users estimate shipping costs between cities across Indonesia. Utilizing Laravel for robust and efficient back-end development, Bootstrap for a modern and responsive user interface, and Livewire for seamless, real-time interactions, this application integrates the Raja Ongkir API to provide accurate and up-to-date shipping cost data. Users can check shipping costs, receive delivery time estimates, and access detailed information about shipping carriers. The user-friendly and intuitive interface ensures a smooth experience, whether accessed via desktop or mobile device. This project showcases my ability to integrate various technologies and APIs to build a practical and effective tool for real-world logistics needs.
+                        </p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="https://raja-ongkir-production.up.railway.app/" target="_blank"
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="https://github.com/mhddfajarr/Cek-Ongkir-Indonesia" target="_blank"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
+                        </div>
+                    </div>
+                    
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/siakad.png" alt="" class="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Website-based Academic Information System</h3>
-                        <p class="font-medium text-base text-slate-300">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
-                    </div>
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/voucher-api.png" alt="" class="w-full">
+                        <p class="font-medium text-base text-slate-300 mb-5">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="#" 
+                               onclick="alert('Demo not available'); return false;" 
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="https://github.com/mhddfajarr/Sistem-Informasi-Akademik" target="_blank"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">API-Voucher</h3>
-                        <p class="font-medium text-base text-slate-300">A voucher management API project using Laravel, which includes features for creating, claiming, deleting vouchers upon claim, and filtering by selected categories. This API allows users to create new vouchers, claim vouchers, automatically delete claimed vouchers, and filter vouchers based on chosen categories.</p>
-                    </div>
-                    <div class="mb-12 p-4 md:w-1/2">
-                        <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/divanusa.png" alt="" class="w-full">
-                        </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Carbon Market Website</h3>
-                        <p class="font-medium text-base text-slate-300">Carbon market website is a website that sells carbon emissions. This website is used using HTML, CSS, Laravel Framework, and MySQL database.</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/adminPanel.png" alt="" class="w-full">
                         </div>
                         <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Filament Admin Panel</h3>
-                        <p class="font-medium text-base text-slate-300">Our admin panel, built with the powerful Filament framework, offers comprehensive data management features, including robust CRUD actions, file import/export, and bulk import capabilities. It also features interactive widgets for real-time charts and statistics, providing immediate insights for quick decision-making. Additionally, it implements multi-tenancy.</p>
+                        <p class="font-medium text-base text-slate-300 mb-3">Our admin panel, built with the powerful Filament framework, offers comprehensive data management features, including robust CRUD actions, file import/export, and bulk import capabilities. It also features interactive widgets for real-time charts and statistics, providing immediate insights for quick decision-making. Additionally, it implements multi-tenancy.</p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="#" 
+                               onclick="alert('Demo not available'); return false;" 
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="https://github.com/mhddfajarr/Filament" target="_blank"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/voucher-api.png" alt="" class="w-full">
+                        </div>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">API-Voucher</h3>
+                        <p class="font-medium text-base text-slate-300 mb-3">A voucher management API project using Laravel, which includes features for creating, claiming, deleting vouchers upon claim, and filtering by selected categories. This API allows users to create new vouchers, claim vouchers, automatically delete claimed vouchers, and filter vouchers based on chosen categories.</p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="#" 
+                               onclick="alert('Demo not available'); return false;" 
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="https://github.com/mhddfajarr/Sistem-Informasi-Akademik" target="_blank"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/divanusa.png" alt="" class="w-full">
+                        </div>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Carbon Market Website</h3>
+                        <p class="font-medium text-base text-slate-300 mb-3">Carbon market website is a website that sells carbon emissions. This website is used using HTML, CSS, Laravel Framework, and MySQL database.</p>
+                        <div class="flex space-x-4 mt-4 px-8">
+                            <a href="#" 
+                               onclick="alert('Demo not available'); return false;" 
+                               class="text-xs font-semibold text-white bg-blue-700 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-blue-800 transition duration-200 ease-in-out">
+                               Demo
+                            </a>
+                            <a href="#" 
+                            onclick="alert('the repository has not been pushed yet'); return false;"
+                               class="text-xs font-semibold text-white bg-amber-500 py-2 px-4 rounded-lg mr-3 mb-5 lg:text-sm hover:shadow-lg hover:bg-amber-600 transition duration-200 ease-in-out">
+                               GitHub
+                            </a>
+                        </div>
                     </div>
                     <!-- <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
