--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <!-- <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/voucher-api.png" alt="" class="w-full">
                         </div>
@@ -324,7 +324,7 @@
                                GitHub
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/divanusa.png" alt="" class="w-full">
